Fixed BUG#4934: Caching issue with stored procedures.   ...and added new test file, sp-threads, for multiple connection tests   (apart from the security tests that are in sp-security).

sql/sp.cc:
  When removing an SP, invalidate the caches even if the
  removing thread doesn't have one.