sql/sp.cc
@@ -722,11 +722,14 @@ int
 sp_drop_procedure(THD *thd, sp_name *name)
 {
   int ret;
+  bool found;
   DBUG_ENTER("sp_drop_procedure");
   DBUG_PRINT("enter", ("name: %*s", name->m_name.length, name->m_name.str));
 
-  sp_cache_remove(&thd->sp_proc_cache, name);
+  found= sp_cache_remove(&thd->sp_proc_cache, name);
   ret= db_drop_routine(thd, TYPE_ENUM_PROCEDURE, name);
+  if (!found && !ret)
+    sp_cache_invalidate();
   DBUG_RETURN(ret);
 }
 
@@ -737,12 +740,15 @@ sp_update_procedure(THD *thd, sp_name *name,
 		    st_sp_chistics *chistics)
 {
   int ret;
+  bool found;
   DBUG_ENTER("sp_update_procedure");
   DBUG_PRINT("enter", ("name: %*s", name->m_name.length, name->m_name.str));
 
-  sp_cache_remove(&thd->sp_proc_cache, name);
+  found= sp_cache_remove(&thd->sp_proc_cache, name);
   ret= db_update_routine(thd, TYPE_ENUM_PROCEDURE, name,
 			 newname, newnamelen, chistics);
+  if (!found && !ret)
+    sp_cache_invalidate();
   DBUG_RETURN(ret);
 }
 
@@ -814,11 +820,14 @@ int
 sp_drop_function(THD *thd, sp_name *name)
 {
   int ret;
+  bool found;
   DBUG_ENTER("sp_drop_function");
   DBUG_PRINT("enter", ("name: %*s", name->m_name.length, name->m_name.str));
 
-  sp_cache_remove(&thd->sp_func_cache, name);
+  found= sp_cache_remove(&thd->sp_func_cache, name);
   ret= db_drop_routine(thd, TYPE_ENUM_FUNCTION, name);
+  if (!found && !ret)
+    sp_cache_invalidate();
   DBUG_RETURN(ret);
 }
 
@@ -829,12 +838,15 @@ sp_update_function(THD *thd, sp_name *name,
 		    st_sp_chistics *chistics)
 {
   int ret;
+  bool found;
   DBUG_ENTER("sp_update_procedure");
   DBUG_PRINT("enter", ("name: %*s", name->m_name.length, name->m_name.str));
 
-  sp_cache_remove(&thd->sp_func_cache, name);
+  found= sp_cache_remove(&thd->sp_func_cache, name);
   ret= db_update_routine(thd, TYPE_ENUM_FUNCTION, name,
 			 newname, newnamelen, chistics);
+  if (!found && !ret)
+    sp_cache_invalidate();
   DBUG_RETURN(ret);
 }
 
